# scaled_variance_cons_laws

./: CMakeLists.txt  README.md  scaled_variance.cc
include/: scaled_variance.h
